add css for index.html to remove google ad

--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Custom Search Engine</title>
-    <script type="text/javascript">
-      function focusFieldOne() {
-        document.querySelector('input[name="search"]').focus()
-      }
-    </script>
+  <meta charset="UTF-8">
+  <title>Custom Search Engine</title>
+  <script type="text/javascript">
+    function focusFieldOne() {
+      document.querySelector('input[name="search"]').focus()
+    }
+  </script>
+  <style>
+    /*  Google Adsense  */
+    .gsc-adBlock {display:none !important}
+
+  </style>
 </head>
 <body onload="focusFieldOne()">
   <script async src="https://cse.google.com/cse.js?cx=e9a1e480e37a86080"></script>
