change css of index.html to hide labels

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,8 @@
   <style>
     /*  Google Adsense  */
     .gsc-adBlock {display:none !important}
+    /* per result labels */
+    .gs-per-result-labels { display:none !important; }
 
   </style>
 </head>
